<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.ss</groupId>
    <artifactId>rbac</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>javax.persistence-api</artifactId>
            <version>2.2</version>
        </dependency>
        <!-- TEST -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.199</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>5.4.1.Final</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>6.0.15.Final</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.11.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.11.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/node_modules/**</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <!--annotationProcessorPaths>
                        <path>
                            <groupId>org.hibernate</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <version>5.4.1.Final</version>
                        </path>
                    </annotationProcessorPaths-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <classpathDependencyScopeExclude>test</classpathDependencyScopeExclude>
                    <classesDirectory>path/to/none</classesDirectory>
                    <argLine>
                        --module-path target/classes:target/test-classes:${settings.localRepository}/javax/validation/validation-api/2.0.1.Final/validation-api-2.0.1.Final.jar:${settings.localRepository}/javax/persistence/javax.persistence-api/2.2/javax.persistence-api-2.2.jar:${settings.localRepository}/junit/junit/4.12/junit-4.12.jar:${settings.localRepository}/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar:${settings.localRepository}/com/h2database/h2/1.4.199/h2-1.4.199.jar:${settings.localRepository}/org/hibernate/hibernate-core/5.4.1.Final/hibernate-core-5.4.1.Final.jar:${settings.localRepository}/org/jboss/logging/jboss-logging/3.3.2.Final/jboss-logging-3.3.2.Final.jar:${settings.localRepository}/org/javassist/javassist/3.24.0-GA/javassist-3.24.0-GA.jar:${settings.localRepository}/net/bytebuddy/byte-buddy/1.9.5/byte-buddy-1.9.5.jar:${settings.localRepository}/antlr/antlr/2.7.7/antlr-2.7.7.jar:${settings.localRepository}/org/jboss/spec/javax/transaction/jboss-transaction-api_1.2_spec/1.1.1.Final/jboss-transaction-api_1.2_spec-1.1.1.Final.jar:${settings.localRepository}/org/jboss/jandex/2.0.5.Final/jandex-2.0.5.Final.jar:${settings.localRepository}/com/fasterxml/classmate/1.3.4/classmate-1.3.4.jar:${settings.localRepository}/javax/activation/javax.activation-api/1.2.0/javax.activation-api-1.2.0.jar:${settings.localRepository}/org/dom4j/dom4j/2.1.1/dom4j-2.1.1.jar:${settings.localRepository}/org/hibernate/common/hibernate-commons-annotations/5.1.0.Final/hibernate-commons-annotations-5.1.0.Final.jar:${settings.localRepository}/javax/xml/bind/jaxb-api/2.3.1/jaxb-api-2.3.1.jar:${settings.localRepository}/org/glassfish/jaxb/jaxb-runtime/2.3.1/jaxb-runtime-2.3.1.jar:${settings.localRepository}/org/glassfish/jaxb/txw2/2.3.1/txw2-2.3.1.jar:${settings.localRepository}/com/sun/istack/istack-commons-runtime/3.0.7/istack-commons-runtime-3.0.7.jar:${settings.localRepository}/org/jvnet/staxex/stax-ex/1.8/stax-ex-1.8.jar:${settings.localRepository}/com/sun/xml/fastinfoset/FastInfoset/1.2.15/FastInfoset-1.2.15.jar:${settings.localRepository}/org/hibernate/validator/hibernate-validator/6.0.15.Final/hibernate-validator-6.0.15.Final.jar:${settings.localRepository}/org/apache/logging/log4j/log4j-api/2.11.2/log4j-api-2.11.2.jar:${settings.localRepository}/org/apache/logging/log4j/log4j-core/2.11.2/log4j-core-2.11.2.jar
                        --add-modules ss.rbac.test
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <name>rbac</name>
</project>